@startuml diagrama-paquetes
' Forzar diagrama de clases (evitar que asuma component)
class __Inicio {}
hide __Inicio

!theme plain
title Diagrama de Paquetes - Tuberías y Filtros


skinparam packageStyle folder
skinparam defaultFontSize 10

' Paquete raíz (proyecto) con paquetes anidados
package tuberias_filtros #F5F5F5 {

  package datos #E8F5E9 {
    class PaqueteDatos
    enum TipoDato
  }

  package interfaces #E3F2FD {
    interface IFiltro
    interface IFiltroMultiple
  }

  package motor #FFF3E0 {
    class Tuberia
    class GestorTuberias
  }

  package filtros #ECEFF1 {
    class CargarArchivoDeTexto
    class ConvertirTextoABinario
    class FiltroImagenes
    class ConvertirBinarioABase64
    class ConvertirBase64ABinario
    class EncriptarArchivoTextoSHA256
    class BuscarPalabraEnArchivoTexto
    class ListarPalabrasFrecuenciaDeOcurrencia
  }

  package fabrica #F3E5F5 {
    class FabricaFiltros
  }

  package presentacion #E8EAF6 {
    class VistaEscritorio
  }

  package inicio #E0F2F1 {
    class InicioAplicacion
  }
}

' Dependencias entre paquetes (usando clases para evitar conflictos de sintaxis)
IFiltro ..> PaqueteDatos : <<importa>>
Tuberia ..> IFiltro : <<importa>>
CargarArchivoDeTexto ..> IFiltro : <<implementa>>
FabricaFiltros ..> GestorTuberias : <<crea>>
FabricaFiltros ..> CargarArchivoDeTexto : <<crea>>
VistaEscritorio ..> FabricaFiltros : <<usa>>
VistaEscritorio ..> GestorTuberias : <<usa>>
InicioAplicacion ..> VistaEscritorio : <<crea>>
InicioAplicacion ..> FabricaFiltros : <<usa>>

legend right
  |= Estructura |= Significado |
  | tuberias_filtros | paquete raíz (proyecto) |
  | datos, interfaces, etc. | subpaquetes anidados |
  | ..> | dependencia entre paquetes |
endlegend

@enduml
